--- a/miniprogram/pages/authorization/authorization.scss
+++ b/miniprogram/pages/authorization/authorization.scss
@@ -31,3 +31,53 @@ page{
         }
     }
 }
+.privacy-container {
+    width: 100%;
+    // background-color: #f8f8f8;
+
+    .privacy-title {
+        background-color: #ffffff;
+        display: flex;
+        height: 100rpx;
+        align-items: center;
+        justify-content: center;
+        font-size: 32rpx;
+        font-weight: bold;
+    }
+
+    .privacy-desc {
+        background-color: #f8f8f8;
+        padding: 30rpx 20rpx;
+        font-size: 26rpx;
+        font-weight: 500;
+        text-indent: 2em;
+        margin: 0 30rpx;
+
+        .privacy-docs {
+            color: #E54D42;
+            text-decoration-line: underline;
+        }
+    }
+
+    .privacy-btn {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+
+
+        .privacy-btn-item {
+            width: 300rpx;
+            // border-radius: 15rpx;
+            margin-top: 30rpx;
+            font-size: 30rpx;
+            border: none;
+            background-color: #ffffff;
+        }
+
+        .authorization {
+            background-color: #E54D42;
+            color: #ffffff;
+        }
+    }
+}
